--- a/assets/views/contacto.html
+++ b/assets/views/contacto.html
@@ -36,9 +36,54 @@
     <main>
         <div class="container">
             <h1 class="negrita titulo">CONTACTO</h1>
-            <div class="fondo">
+            <div class="form-group">
+                <label for="name">nombre y apellido</label>
+                <input type="text" name="name" class="write form-control" required>
+                <br>
+    
+    
+                <label for="mail">correo electrónico</label>
+                <input type="email" name="mail" class="write form-control">
+                <br>
+    
+                <label for="cel">numero de celular</label>
+                <input type="number" name="cel" class="write form-control">
+                <br>
+                
+                <!-- 
+                <label for="">sexo: </label>
+                <input type="radio" name="sexo" required>
+                <label class="radio" for="sexo">masculino</label>
+                <input type="radio" name="sexo">
+                <label class="radio" for="sexo">femenino</label>
+                <br> 
+                --> 
+                
+                <label for="sexo">sexo:</label>
+                <div class="radio">
+                    <label><input type="radio" name="sexo" checked>hombre</label>
+                </div>
+                <div class="radio">
+                    <label><input type="radio" name="sexo">mujer</label>
+                </div>
+    
+                <br>
+                
+                <textarea name="mensaje" id="" cols="30" rows="10" class="form-control" placeholder="ingrese su mensaje aqui" required></textarea>
+                
+                <br>
+    
+                <!--
+                <input type="submit" value="enviar mensaje">
+                <input type="reset" value="borrar">
+                -->
+                
+                <button type="submit" class="btn btn-dark">enviar</button>
+    
+            </div>
+            <!--<div class="fondo">
                 <!--<h1 class="negrita titulo">CONTACTO</h1>-->
-                <form class="relleno sangria" action="enviar.php" metod="get" enctype="text/plain">
+                <!--<form class="relleno sangria" action="enviar.php" metod="get" enctype="text/plain">
                     <label for="name">Nombre y Apellido</label>
                     <input type="text" name="name" required="">
                     <br>
@@ -59,7 +104,7 @@
                     <input type="submit" value="enviar mensaje">
                     <input type="reset" value="borrar">
                 </form>
-            </div>
+            </div>-->
         </div>
     </main>
     <footer>
