--- a/assets/views/integrantes.html
+++ b/assets/views/integrantes.html
@@ -79,10 +79,10 @@
     </main>
     <footer>
         <div>
-            <h3>INSTAGRAM</h3>
-            <h3>FACEBOOK</h3>
-            <h3>YOUTUBE</h3>
-            <h3>EMAIL</h3>
+            <h3 class="redes negrita">INSTAGRAM</h3>
+            <h3 class="redes negrita">FACEBOOK</h3>
+            <h3 class="redes negrita">YOUTUBE</h3>
+            <h3 class="redes negrita">EMAIL</h3>
         </div>
     </footer>
 </body>
