--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -23,11 +23,16 @@ html {
 
 ul {
     list-style-type: none;
+    font-size: 1.2em;
 }
 
 a {
     text-decoration: none;
     display: inline-block;
+}
+
+p {
+    font-size: 1.2em;
 }
 
 body {
@@ -36,6 +41,11 @@ body {
     display: grid;
     grid-template-rows: auto 1fr auto;
     min-height: 100vh;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+h1 {
+    margin-left: 1rem;
 }
 
 /* helpers */
@@ -71,6 +81,11 @@ body {
 .relleno {
     font-size: var(--text-md);
 } 
+
+.field {
+    margin-top: 0.5rem; 
+    margin-bottom: 0.5rem;
+}
 
 
 /* Header */
@@ -109,14 +124,6 @@ header .menu {
 }
 /* Main */
 
-main div form {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-/*main {
-    flex-basis: 100%;
-}*/
-
 .center {
     /*background-color: var(--secondary);*/
     /*background-color: #56D3A1;*/
@@ -128,6 +135,7 @@ main div form {
 
 .banda {
     width: 70em;
+    justify-content: center;
 }
 
 /* Footer */
@@ -142,10 +150,9 @@ footer {
 
 footer div h3 {
     display: inline-block;
-    margin-top: 2.5rem;
+    margin-top: 3.8rem;
     margin-left: 9rem;
     margin-right: 9rem;
-    
 }
 
 /* Index */
@@ -200,13 +207,31 @@ main article div section h2 {
     padding-right: 1.5rem;
 }
 
+
 /*Discografia*/
 
 main div table {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    width: 100%;
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+}
+
+main div table tr th {
+    font-size: var(--text-md);
+    background-color: #5FB0B7;
+    padding: 1rem;
+}
+
+main div table tr td {
+    font-size: 1.2em;
+    background-color: rgba(255, 211, 117, 0.808);
+    text-align: center;
+}
+
+main div table tr td ul {
+    padding-right: 4rem;
 }
 
 /*Contacto*/
@@ -216,6 +241,41 @@ main div div {
     padding-bottom: 0.3rem;
 }
 
+/*Contacto-Main-Form*/
+
+form {
+    margin-top: 1.3rem; 
+    margin-bottom: 1.3rem;
+}
+
+.field label {
+    font-size: 1.2em;
+    margin-bottom: 0.3rem;
+}
+
+.field input {
+    font-size: var(--text-md);
+    height: 2.5rem;
+    padding-left: 0.8rem;
+    width: 100%;
+    max-width: 25em;
+    /*margin-right: 4rem;*/
+    border-radius: 0.5em;
+    border: 0.2em solid #fff;
+}
+
+.eleccion {
+    font-size: 1.2em;
+}
+
+.textbox {
+    font-size: var(--text-md);
+    border-radius: 0.5em;
+    border: 0.2em solid #fff;
+    width: 100%;
+    max-width: 25em;
+    padding-left: 0.8rem;
+}
 /*main section article p {
     margin: 1rem;
 }*/
@@ -247,7 +307,7 @@ main div div {
     }
     /*header*/
     .menu {
-        font-size: 0.1em;
+        font-size: 0.2em;
     }
     header .ilustracion {
         flex-basis: 30%;
@@ -259,15 +319,30 @@ main div div {
     }
     /*footer*/
     footer div h3 {
-        margin-top: 2.5rem;
+        margin-top: 2rem;
         margin-left: 6rem;
         margin-right: 6rem;
+        margin-bottom: 2rem;
     }
     /*globals*/
     h3 {
         font-size: 1em;
     }
     h2 {
+        font-size: 1em;
+    }
+    p {
+        font-size: 0.8em;
+    }
+    ul {
+        font-size: 0.8em;
+    }
+     /*discografia*/
+     main div table tr th {
+        font-size: 1em;
+    }
+    
+    main div table tr td {
         font-size: 1em;
     }
 }
@@ -286,12 +361,13 @@ main div div {
     }
     /*main*/
     .banda {
-        width: 45em;
+        width: 38em;
     }
     footer div h3 {
-        margin-top: 2.5rem;
+        margin-top: 2rem;
         margin-left: 7rem;
         margin-right: 7rem;
+        margin-bottom: 2rem;
     }
     /*globals*/
     h3 {
@@ -299,6 +375,20 @@ main div div {
     }
     h2 {
         font-size: 1.2em;
+    }
+    p {
+        font-size: 0.8em;
+    }
+    ul {
+        font-size: 0.8em;
+    }
+    /*discografia*/
+    main div table tr th {
+        font-size: 1.2em;
+    }
+    
+    main div table tr td {
+        font-size: 1em;
     }
 }
 
@@ -320,9 +410,10 @@ main div div {
     }
     /*footer*/
     footer div h3 {
-        margin-top: 2.5rem;
-        margin-left: 9.5rem;
-        margin-right: 9.5rem;
+        margin-top: 2rem;
+        margin-left: 9.8rem;
+        margin-right: 9.8rem;
+        margin-bottom: 2rem;
     }
     /*globals*/
     h3 {
@@ -331,9 +422,30 @@ main div div {
     h2 {
         font-size: 1.2em;
     }
+    p {
+        font-size: 1em;
+    }
+    ul {
+        font-size: 1em;
+    }
+    /*discografia*/
+    main div table tr th {
+        font-size: 1.2em;
+    }
+    
+    main div table tr td {
+        font-size: 1em;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width:1023px) {
+    /*globals*/
+    p {
+        font-size: 1em;
+    }
+    ul {
+        font-size: 1em;
+    }
     /*helpers*/
     .negrita {
         font-size: 1.3em;
@@ -343,7 +455,7 @@ main div div {
     }
     /*header*/
     .menu {
-        font-size: 0.8em;
+        font-size: 1em;
     }
     /*main*/
     .banda {
@@ -351,8 +463,17 @@ main div div {
     }
     /*footer*/
     footer div h3 {
-        margin-top: 2.5rem;
-        margin-left: 14rem;
-        margin-right: 14rem;
+        margin-top: 2rem;
+        margin-left: 14.2rem;
+        margin-right: 14.2rem;
+        margin-bottom: 2rem;
+    }
+    /*discografia*/
+    main div table tr th {
+        font-size: 1.2em;
+    }
+    
+    main div table tr td {
+        font-size: 1em;
     }
 }
