--- a/assets/views/contacto.html
+++ b/assets/views/contacto.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="contactate con Amantes de Imagine Dragons">
+    <meta name="keywords" content="Mail, Telefono, Comunicarse, Dudas">
     <link rel="shortcut icon" href="../img/imagen 2.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <title>Amante de Imagine Dragons</title>
+    <link rel="stylesheet" href="../css/index.css">
+    <title>Amante de Imagine Dragons - Contacto</title>
 </head>
 <body>
     <header>
@@ -60,7 +62,10 @@
                         <input type="number" name="cel">
                     </div>
                     <div>
-                        <textarea class="textbox" name="mensaje" id="" cols="30" rows="10" placeholder="ingrese su mensaje aqui" required=""></textarea>
+                        <textarea class="textbox" name="mensaje" id="" cols="30" rows="10" placeholder="ingrese su mensaje aqui" required></textarea>
+                    </div>
+                    <div class="submit">
+                        <button>Enviar</button>
                     </div>
                 </form>
             </div>
