--- a/assets/views/historia.html
+++ b/assets/views/historia.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Te contamos desde sus inicios, hasta sus mayores logros">
+    <meta name="keywords" content="Historia, Logros, Primera cancion, Premios, Origen">
     <link rel="shortcut icon" href="../img/imagen 2.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <title>Amante de Imagine Dragons</title>
+    <link rel="stylesheet" href="../css/index.css">
+    <title>Amante de Imagine Dragons - Historia</title>
 </head>
 <body>
     <header>
