--- a/assets/views/integrantes.html
+++ b/assets/views/integrantes.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Integrantes del grupo musical Imagine Dragons">
+    <meta name="keywords" content="Banda, Cantante, Baterista, Guitarrista, Miembros actuales, Antiguos miembros">
     <link rel="shortcut icon" href="../img/imagen 2.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <title>Amante de Imagine Dragons</title>
+    <link rel="stylesheet" href="../css/index.css">
+    <title>Amante de Imagine Dragons - Integrantes</title>
 </head>
 <body>
     <header>
@@ -57,24 +59,6 @@
                     <ul>William Wells</ul>
                 </section>
             </div>
-                <!--<section class="fondo">
-                    <h2>MIEMBROS ACTUALES</h2>
-                    <ul>Dan Reynolds</ul>
-                    <ul>Ben McKee</ul>
-                    <ul>Daniel Wayne Sermon</ul>
-                    <ul>Daniel Platzman</ul>
-                    <ul>Elliot Schwartzman</ul>
-                </section>
-                <section class="fondo">
-                    <h2>EX MIEMBROS</h2>
-                    <ul>Andrew Tolman</ul>
-                    <ul>Brittany Tolman</ul>
-                    <ul>Theresa Flaminio</ul>
-                    <ul>Dave Lemke</ul>
-                    <ul>Aurora Florence</ul>
-                    <ul>Andrew Beck</ul>
-                    <ul>Ryan Walker</ul>
-                    <ul>William Wells</ul>-->
         </article>
     </main>
     <footer>
